fix event card blur on safari

--- a/resources/sass/_utilities.scss
+++ b/resources/sass/_utilities.scss
@@ -5,7 +5,3 @@
 .grayscale {
     filter: grayscale(100);
 }
-
-.blur {
-    backdrop-filter: blur(4px);
-}
